--- a/test/fixtures/receipts.yml
+++ b/test/fixtures/receipts.yml
@@ -1,11 +1,5 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  name: MyString
-  store: MyString
-  date: 2016-09-03
-
-two:
-  name: MyString
-  store: MyString
+empty:
+  store: WalMart
   date: 2016-09-03
