--- a/config/database.yml
+++ b/config/database.yml
@@ -15,7 +15,5 @@ test:
   database: db/test.sqlite3
 
 production:
-  <<: *default
-  adapter: postgresql
   encoding: unicode
-  database: db/production.sqlite3
+  pool: 5
